 -fixed a problem with the undo-manager which caused the undo-button be inactive even if they where undo-steps available
 -fixed a problem where sending a flame to the batch-renderer did not cause to render the preview
 -fixed a bug which an InvalidOutputStream -error on macOS when creating voxel-stacks

V8.00 (19.02.2023)
 - huge improvements in solid rendering, hence the big change in version number:
    -now it feels like it should have from the start, i.e. it's fun to use
    -needs less render time (about 66%)
    -quicker response in the preview-render
    -more accurate calculation of normal vectors
    -more accurate lighting calculation
    -needs less spatial oversampling in order to get clear details in many cases
    -there are three other sizes of shadow maps available
    -fixed an old bug which caused the shadow direction differing from the light direction
    -much faster tone-mapping (the final phase of rendering)
    -use reduced shadow-map size when rendering (smaller) previews to save memory
    -new "pre_affine3D"- and "post_affine3D"-variations for more precise control over affine transforms in 3D space
    -all solid-random-flame-generators now support many more base-shapes
 - new "Solid (recursive)"-random-flame-generator to generate simple but nice solid flames (thanks Brad for the name suggestion)
 - fixed a bug which prevented entering of values into number-fields manually in some cases
 - increased the default value of tinaRealtimePreviewIdleAmount (which causes less idling and smoother realtime-preview))
 - changed the locale of number-fields to US, so that the decimal separator is always a dot (".")
 - added "hourglass3D"-variation as suggested at the Facebook-group
 - added "Yummy Gnarls BS"-script, made by Brad Stefanov

V7.55 (07.01.2023)
 - fixed a bug with the display-zoom when the property tinaLegacyRealtimePreview was active

V7.54 (30.12.2022)